[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
requires-python = ">= 3.8"
dependencies = [
    "rdkit >= 2022.09.5",
    "requests"
    ]
name = "standardizeUtils"
version = "0.1"
description = "Utilities for standardizing SMILES and InChI strings with PubChem or rdkit"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
            "Programming Language :: Python :: 3",
            "License :: OSI Approved :: MIT License",
            "Operating System :: OS Independent",
]
[project.urls]
"Homepage" = "https://github.com/boecker-lab/standardizeUtils"
"Bug Tracker" = "https://github.com/boecker-lab/standardizeUtils/issues"
